finished the application

--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -77,6 +77,10 @@
     background: var(--color-secundary-dark);
 }
 
+.teacher-item a {
+    text-decoration: none;
+}
+
 @media (min-width: 740px){
    
     
